--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 </div>
 
 
-<section>
-    <div><img src="https://tyra-parring.github.io/host-/image/InShot_20240424_205858533.jpg" width="300" height="390">
+<section id="sectionLanding" >
+    <div>
+        <img src="https://tyra-parring.github.io/host-/image/InShot_20240424_205858533.jpg" width="300" height="390">
     </div>
 
 </section>
