--- a/about.html
+++ b/about.html
@@ -23,10 +23,17 @@
             <a class="nav-link text-white me-3" href="./contactme.html">Contact Me</a>
         </div>
     </div>
-
-<h1>ABOUT</h1>
     
 </body>
+<main>
+    <h1 class="heading">ABOUT</h1>
+    <p class="text">Hi! I am Tyra Parring. I am an aspiring developer and my hunger for knowledge and determination to turn information into action has contributed to my success of being at Life Choices Academy today. I am a hard-working and driven individual who isn't afraid to face a challenge. I'm passionate about my work and I know how to get the job done. I would describe myself as an open and honest person who doesn't believe in misleading other people and tries to be fair in everything I do.</p>
+</main>
+<section>
+    <div><img class="img" src="https://tyra-parring.github.io/host-/image/1667922265465.jpg" width="300" height="390">
+    </div>
+
+</section>
 
 <footer class="footer-container">
     <div class="social-media-icons">
