added image and text

--- a/about.html
+++ b/about.html
@@ -27,12 +27,19 @@
 </body>
 <main>
     <h1 class="heading">ABOUT</h1>
-    <p class="text">Hi! I am Tyra Parring. I am an aspiring developer and my hunger for knowledge and determination to turn information into action has contributed to my success of being at Life Choices Academy today. I am a hard-working and driven individual who isn't afraid to face a challenge. I'm passionate about my work and I know how to get the job done. I would describe myself as an open and honest person who doesn't believe in misleading other people and tries to be fair in everything I do.</p>
 </main>
-<section>
-    <div><img class="img" src="https://tyra-parring.github.io/host-/image/1667922265465.jpg" width="300" height="390">
-    </div>
 
+<section>
+    <div class="about">
+        <div class="aboutMe">
+            <img class="img" src="https://tyra-parring.github.io/host-/image/1667922265465.jpg" width="300" height="390">
+        </div>
+        
+        <div class="aboutText">
+            <p class="text">Hi! I am Tyra Parring. I am an aspiring developer<br> and my hunger for knowledge and determination<br> to turn information into action has contributed to<br> my success of being at Life Choices Academy<br> today. I am a hard-working and driven individual<br> who isn't afraid to face a challenge. I'm passionate<br> about my work and I know how to get the job<br> done. I would describe myself as an open and<br> honest person who doesn't believe in misleading<br> other people and tries to be fair in everything I<br> do.</p>
+        </div>
+
+    </div>
 </section>
 
 <footer class="footer-container">
