--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <section id="sectionLanding" >
     <div>
-        <img src="https://tyra-parring.github.io/host-/image/InShot_20240424_205858533.jpg" width="300" height="390">
+        <img class="homeImage" src="https://tyra-parring.github.io/host-/image/InShot_20240424_205858533.jpg" width="300" height="390">
     </div>
 
 </section>
