--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
 
 <section id="sectionLanding" >
-    <div>
-        <img class="homeImage" src="https://tyra-parring.github.io/host-/image/InShot_20240424_205858533.jpg" width="300" height="390">
+    <div class="homeImage">
+        <img src="https://tyra-parring.github.io/host-/image/InShot_20240424_205858533.jpg" width="300" height="390">
     </div>
 
 </section>
