--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
 </section>
 </body>
 
+<main>
+    <div class="openSentence">
+        <p>I AM TYRA PARRING</p>
+    </div>
+
+    <div class="scndSentence">
+        <p>an aspiring web and software<br> developer</p>
+    </div>
+</main>
+
 
 <footer class="footer-container">
     <div class="social-media-icons">
