--- a/resume.html
+++ b/resume.html
@@ -26,6 +26,38 @@
     
 </body>
 
+<section class="edu">
+    <h1 class="resu">RESUME</h1>
+    <h1>Education</h1>
+
+    <div class="container text-center">
+        <div class="row">
+            <div class="col">
+              <p>2019 - 2022<br>I completed my schooling career at<br> Bonteheuwel High School.</p>
+              <p> 2021<br>
+                  Completed a Reading and Writing Tutoring Workshop under the Amy Biehl Foundation</p>
+          </div>
+
+          <div class="col">
+              <p>2024 - 2025<br>I joined a Coding Bootcamp<br> program that provides you with the<br> fundamentals of Web Development,<br> as well as learning coding<br> languages such as HTML, CSS,<br> JavaScript, and more. We were also<br> taught interpersonal and self-<br>development skills to help us<br> develop in life and not just in a<br> work environment.</p>
+          </div>
+    </div>
+</section>
+
+<section class="work">
+    <h1 class="head">Work Experience</h1>
+
+    <div class="container text-center">
+        <div class="row">
+            <div class="col">
+    <p>2022 - FUTUR-ED E-LEARNING CENTRES<br>
+        Completed a job shadowing<br> programme at a contact centre<br> promoting products to customers<br></p>
+    </div>
+</section>
+
+
+
+
 <footer class="footer-container">
     <div class="social-media-icons">
     <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-3 7h-1.924c-.615 0-1.076.252-1.076.889v1.111h3l-.238 3h-2.762v8h-3v-8h-2v-3h2v-1.923c0-2.022 1.064-3.077 3.461-3.077h2.539v3z"/></svg></a>
