--- a/testimonials.html
+++ b/testimonials.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Testimonials</title>
 </head>
-<body class="image-five">
+<section class="image-five">
     <div class="navbar sticky-top d-flex bg-dark bg-body-tertiary border-bottom border-body" data-bs-theme="dark">
         <a class="navbar-brand" href="#">
             <img src="https://tyra-parring.github.io/host-/image/job204-wan-20.jpg" alt="Logo" width="60" height="55" class="d-inline-block align-text-top">
@@ -24,7 +24,22 @@
         </div>
     </div>
     
+</section>
+
+<body>
+    <img src="https://tyra-parring.github.io/host-/image/top-view-beautiful-plant-leaves-with-copy-space.jpg" class="image-five" alt="">
 </body>
+
+    <section>
+        
+        <h1 class="testim">TESTIMONIALS</h1>
+    </section>
+
+
+
+
+
+
 
 <footer class="footer-container">
     <div class="social-media-icons">
