--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="scndSentence">
-        <p>an aspiring web and software<br> developer</p>
+        <p class="fade-in-text">an aspiring web and <span>software</span><br> developer</p>
     </div>
 </main>
 
