--- a/skills.html
+++ b/skills.html
@@ -23,6 +23,8 @@
             <a class="nav-link text-white me-3" href="./contactme.html">Contact Me</a>
         </div>
     </div>
+
+    <h1 class="skills">SKILLS</h1>
     
 </body>
 
@@ -63,7 +65,7 @@
 </div>
 
 <div class="footer-bottom">
-    <p>Copyright ©2024 | Tyra Parring</p>
+    <p><span>Copyright ©2024 | Tyra Parring</span></p>
 </div>
 </footer>
 
