--- a/contactme.html
+++ b/contactme.html
@@ -76,7 +76,7 @@
 </div>
 
 <div class="footer-bottom">
-    <p>Copyright ©2024 | Tyra Parring</p>
+    <p><span>Copyright ©2024 | Tyra Parring</span></p>
 </div>
 </footer>
 
