--- a/contactme.html
+++ b/contactme.html
@@ -44,12 +44,24 @@
     </div>
 </div>
 
-<section>
+<section><h1 class="ctn">GET IN TOUCH!</h1></section>
+
+<form action="https://formspree.io/f/xrgnrzgz" method="POST">
     <div class="group">
         <input class="form-control form-control-lg" type="text" placeholder="Name" aria-label=".form-control-lg example"><br>
         <input class="form-control form-control-lg" type="text" placeholder="Email" aria-label=".form-control-lg example"><br>
         <input class="form-control form-control-lg" type="text" placeholder="Your Message" aria-label=".form-control-lg example"><br>
     </div>
+    <div class="btns d-flex justify-content-center gap-4">
+        <button type="submit" class="btn btn-dark">Send</button>
+        <button type="submit" class="btn btn-dark">Clear</button>
+    </div>
+</form>
+
+
+
+<section>
+
 </section>
 
 
