--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,49 @@
             <a class="nav-link text-white me-3" href="./contactme.html">Contact Me</a>
         </div>
     </div>
-    
+
+<section>
+    <h1 class="prjs">PROJECTS</h1>
+</section>
+
+<div class="container d-flex justify-content-center"> 
+    <div class="card text-bg-dark mb-3" style="max-width: 18rem; height: 25rem;">
+        <img src="./calculator.png" alt="">
+        <div class="card-body">
+          <h5 class="card-title">Calculator</h5>
+          <p class="card-text">We had the oppotunity to be able to code our own calculator.</p>
+          <a href="https://vercel.com/tyras-projects-90581802/calculator/8WPeiga9f9WQmavW7aKocypfgFwW" class="btn btn-primary btn-light">Visit</a>
+        </div>
+      </div>
+
+      <div class="card text-bg-dark mb-3" style="max-width: 18rem;">
+        <img src="./keyboard.png" alt="">
+        <div class="card-body">
+          <h5 class="card-title">Keyboard</h5>
+          <p class="card-text">We had the oppotunity to be able to code our own keyboard.</p>
+          <a href="https://vercel.com/tyras-projects-90581802/keyboard/6h7BkCedufuLz8gtaUwZs8D4RHeY" class="btn btn-primary btn-light">Visit</a>
+        </div>
+      </div>
+
+      <div class="card text-bg-dark mb-3" style="max-width: 18rem;">
+        <img src="./spider.png" alt="">
+        <div class="card-body">
+          <h5 class="card-title">Web Clone</h5>
+          <p class="card-text">We had the oppotunity to clone a website.</p>
+          <a href="https://spiderman-knrw.vercel.app/" class="btn btn-primary btn-light">Visit</a>
+        </div>
+      </div>
+
+      <div class="card text-bg-dark mb-3" style="max-width: 18rem;">
+        <img src="./wednesday.png" alt="">
+        <div class="card-body">
+          <h5 class="card-title">Website Activity</h5>
+          <p class="card-text">We did an exercise testing the basic layout of a webpage as well as how to link to Formspree.</p>
+          <a href="https://vercel.com/tyras-projects-90581802/wednesday/5z3GE3GbNRwaSXATweSGox3jztQK" class="btn btn-primary btn-light">Visit</a>
+        </div>
+      
+    </div>
+</div>
 </body>
 
 <footer class="footer-container">
