changes about section

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 </main>
 
 <section>
-    <div class="about">
+    <div id="about" class="about">
         <div class="aboutMe">
             <img class="img" src="https://tyra-parring.github.io/host-/image/1667922265465.jpg" width="300" height="390">
         </div>
