--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,7 @@
 <section class="work">
     <h1 class="head">Work Experience</h1>
 
-    <div class="container text-center">
+    <div class="text-center">
         <div class="row">
             <div class="col">
     <p>2022 - FUTUR-ED E-LEARNING CENTRES<br>
