--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     
         <div class="scndSentence">
-            <p class="fade-in-text">an aspiring web and <span>software</span><br> developer</p>
+            <p class="fade-in-text">an aspiring <span>web and s</span>oftware<br> developer</p>
         </div>
     </main>
 </section>
