--- a/skills.html
+++ b/skills.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>Skills</title>
 </head>
 <body class="image-four">
@@ -32,11 +33,13 @@
     <div class="container text-center">
     <div class="row">
         <div class="col">
-          <img src="https://tyra-parring.github.io/host-/image/5968333.png" width="50%">
+        <img src="https://tyra-parring.github.io/host-/image/5968333.png" width="50%">
         </div>
+        
         <div class="col">
-          <img src="https://tyra-parring.github.io/host-/image/5968305.png" width="50%">
-        </div>
+           <img src="https://tyra-parring.github.io/host-/image/5968305.png" width="50%">
+        </div> 
+        
         <div class="col">
           <img src="https://tyra-parring.github.io/host-/image/5968680.png" width="50%">
         </div>
