--- a/testimonials.html
+++ b/testimonials.html
@@ -95,12 +95,11 @@
     <div class="card text-bg-dark mb-3" style="max-width: 540px;">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="" class="img-fluid rounded-start" alt="...">
+          <img src="./Matthew (1).png" class="img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+            <p class="card-text">Tyra is an extremely hard working individual. Her confidence really shows when working in groups. Her positive work ethic is a reflection of her character.</p>
           </div>
         </div>
       </div>
